# riemann-egui-dash

./: Cargo.toml  README.md  build_web.sh  setup_web.sh  start_server.sh
src/: app.rs  confirm_button.rs  event.rs  lib.rs  main.rs  workspace.rs
src/views/: about.rs  big_number.rs  flot.rs  log.rs  mod.rs
