[package]
name = "riemann-egui-dash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.10", features = ["derive"] }
eframe = { path = "../egui/eframe" }
# eframe = "0.18.0" # add the "syntect" feature
egui_extras = { path = "../egui/egui_extras" }
# egui_extras = "0.18.0"
ewebsock = { version = "0.2.0", features = ["tls"] }
serde = { version = "1.0.82", features = ["derive"] }
serde_json = "1.0.82"
tracing = "0.1.35"
url = "2.2.2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
